sample/codepkg/objects/Laptop_Warranty__c.object
<CustomObject>
    <fields>
        <fullName>Active_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <label>Support Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Laptop_Warranty</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Email__c</columns>
        <columns>Support_Level__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Active_Warranty__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Laptop_Warranty</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Laptop_Warranty</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>